--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Software Tester - Web Developer - Blogger</p>
+      <p class="masthead-subheading font-weight-light mb-0">Software Developer - Web Developer - Blogger</p>
 
     </div>
   </header>
