Description and CV update

--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">I am currently working as a Software Tester after achieving a degree
+          <p class="lead">I am currently working as a Software Developer after achieving a degree
             in BSc(Hons) Computing (Web Systems Development).
-            I have a real passion for web development and design, as I take
+            I have a real passion for software development, web development and design. I take
             great pleasure in creating vibrant and responsive websites using the latest tools and
             frameworks that are available.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">I possess previous experience as a web developer both commercially and
+          <p class="lead">I have previous experience as a web developer both commercially and
             some freelance projects that I have undertaken. I have continued to work on several projects
             to ensure that I keep my skills updated and continue to learn more. You can download a copy of
             my CV from the link provided below.</p>
@@ -206,7 +206,7 @@
 
       <!-- About Section Button -->
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="CV.docx">
+        <a class="btn btn-xl btn-outline-light" href="Sean Howie's CV 1.docx">
           <i class="fas fa-download mr-2"></i>
           Download CV
         </a>
