--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
-          <p class="lead mb-0">Partick,
+          <p class="lead mb-0">Based in
             <br>Glasgow</p>
         </div>
 
