Social media changes and copyright update

--- a/index.html
+++ b/index.html
@@ -236,17 +236,12 @@
 
         <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
-            <i class="fab fa-fw fa-facebook-f"></i>
-          </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
-            <i class="fab fa-fw fa-twitter"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/sean-howie-0b3902143/">
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
-            <i class="fab fa-fw fa-dribbble"></i>
+          <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/papashons">
+            <i class="fab fa-fw fa-github"></i>
           </a>
         </div>
       </div>
@@ -256,7 +251,7 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; SGH Designs <?php echo date("Y"); ?></small>
+      <small> SGH &copy; <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script> </small>
     </div>
   </section>
 
