--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">I am currently working as a Software Developer after achieving a degree
-            in BSc(Hons) Computing (Web Systems Development).
+          <p class="lead">I am currently working as a Web Developer.
             I have a real passion for software development, web development and design. I take
             great pleasure in creating vibrant and responsive websites using the latest tools and
             frameworks that are available.</p>
@@ -200,15 +199,15 @@
           <p class="lead">I have previous experience as a web developer both commercially and
             some freelance projects that I have undertaken. I have continued to work on several projects
             to ensure that I keep my skills updated and continue to learn more. You can download a copy of
-            my CV from the link provided below.</p>
+            my Resume from the link provided below.</p>
         </div>
       </div>
 
       <!-- About Section Button -->
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="Sean Howie's CV 1.docx">
+        <a class="btn btn-xl btn-outline-light" href="SeanHowieResume(Word).docx">
           <i class="fas fa-download mr-2"></i>
-          Download CV
+          Download Resume
         </a>
       </div>
 
@@ -225,7 +224,7 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <p class="lead mb-0">Based in
-            <br>Glasgow</p>
+            <br>Montreal</p>
         </div>
 
         <!-- Footer About Text -->
@@ -237,7 +236,7 @@
         <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/sean-howie-0b3902143/">
+          <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/sean-howie/">
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/papashons">
